gccida/c0/find_comparison_args
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_comparison_args/src/cse.c:3587:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code  find_comparison_args( 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_comparison_args/src/cse.c:3588:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_comparison_args/src/cse.c:3591:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *pmode1, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_comparison_args/src/cse.c:3592:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *pmode2) 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_comparison_args/src/cse.c:3595:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code reversed; // [rsp+8h] [rbp-58h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_comparison_args/src/cse.c:3596:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode inner_mode; // [rsp+Ch] [rbp-54h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_comparison_args/src/cse.c:3604:120: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( arg2 = *parg2; arg2 == const_tiny_rtx[0][( unsigned __int8)BYTE2( *( _DWORD *)arg1)]; arg2 = (  struct rtx_def *)x[1] ) 
                                                                                                                       ^~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_comparison_args/src/cse.c:3627:25: error: use of undeclared identifier 'machine_mode'
v5 = safe_hash( arg1, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)arg1)); 
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_comparison_args/src/cse.c:3627:40: error: expected expression
v5 = safe_hash( arg1, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)arg1)); 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_comparison_args/src/cse.c:3628:32: error: use of undeclared identifier 'machine_mode'
p = lookup( arg1, v5 & 0x1F, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)arg1)); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_comparison_args/src/cse.c:3628:47: error: expected expression
p = lookup( arg1, v5 & 0x1F, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)arg1)); 
                                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_comparison_args/src/cse.c:3644:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[inner_mode] == MODE_INT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_comparison_args/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_comparison_args/src/cse.c:3654:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[inner_mode] == MODE_INT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_comparison_args/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_comparison_args/src/obj/cse.o] Error 1
